# open-llm-server

./: Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  launch.py  pyproject.toml  requirements.txt  setup.py
scripts/: launch.py
src/: app.py  launch.py  main.py
src/api/: router.py
src/api/endpoints/: chat.py  embeddings.py  finetune.py  metrics.py
src/core/: config.py  logging.py
src/models/: ml_models.py
tests/: __init__.py  test_chat.py  test_embeddings.py  test_metrics.py
