[tool.poetry]
name = "open-llm-server"
version = "1.0.0"
description = "An open-source LLM server with fine-tuning capabilities"
authors = ["Rishi Zirpe <zirperishi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
torch = "^1.9.0"
transformers = "^4.9.2"
pydantic = "^1.8.2"
pydantic-settings = "^1.2.2"
requests = "^2.26.0"
psutil = "^5.8.0"
numpy = "^1.21.2"
datasets = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
llm-server = "scripts.launch:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"